install @scion/workbench module and styles

--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@scion/components": "^18.0.1",
+    "@scion/microfrontend-platform": "^1.3.0",
+    "@scion/toolkit": "^1.5.0",
+    "@scion/workbench": "^18.0.0-beta.7",
+    "@scion/workbench-client": "^1.0.0-beta.27",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
